# anchor

./: Cargo.toml
avm/: Cargo.toml
cli/: Cargo.toml
cli/src/: config.rs  lib.rs  rust_template.rs
client/: Cargo.toml
client/example/src/: blocking.rs  main.rs  nonblocking.rs
client/src/: lib.rs
docs/content/docs/quickstart/: local.mdx
docs/content/docs/testing/: mollusk.mdx
idl/src/: build.rs
lang/src/: bpf_writer.rs  context.rs  idl.rs  lib.rs
lang/src/accounts/: account.rs  account_loader.rs  interface.rs  interface_account.rs  program.rs  signer.rs  system_account.rs  unchecked_account.rs
lang/syn/src/: lib.rs
lang/syn/src/codegen/accounts/: __client_accounts.rs  __cpi_client_accounts.rs  constraints.rs
lang/syn/src/codegen/program/: cpi.rs
tests/zero-copy/programs/zero-copy/tests/: compute_unit_test.rs
