
[workspace]
members = [
    "avm",
    "cli",
    "client",
    "idl",
    "lang",
    "lang/attribute/*",
    "lang/derive/*",
    "lang/syn",
    "spl",
]
exclude = ["tests/cfo/deps/openbook-dex", "tests/swap/deps/openbook-dex"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.32"
cargo_toml = "0.19.2"
cfg-if = "1.0.0"
chrono = "0.4"
clap = { version = "4.5.17", default-features = false }
clap_complete = "4.5.26"
dirs = "4.0.0"
reqwest = { version = "0.11.9", default-features = false }
semver = "1.0.4"
serde = { version = "1.0.136", default-features = false }
tempfile = "3.3.0"
futures = "0.3"
regex = "1"
solana-account-decoder = "2"
solana-pubsub-client = "2"
solana-rpc-client = "2"
solana-rpc-client-api = "2"
solana-sdk = "2"
thiserror = "1"
tokio = { version = "1", features = ["rt", "sync"] }
url = "2"

anchor-lang = { version = "0.31.1", path = "./lang" }

[profile.release]
lto = true

[profile.release.package.anchor-cli]
codegen-units = 1
